--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -24,7 +24,7 @@
     background-color: #4285f4;
     color: white;
 
-    &.hoven {
+    &:hover {
       background-color: #357ae8;
       border: none;
     }
